vcluster_versioned_docs/version-0.36.0/third-party-integrations/pod-identity/_partials/get-resource-name.mdx
import Tabs from '@theme/Tabs'
import TabItem from '@theme/TabItem'

vCluster rewrites the ServiceAccount name when it syncs the ServiceAccount to the control plane cluster. The synced name follows the pattern `NAME-x-NAMESPACE-x-VCLUSTER_NAME`. Cloud IAM trust policies must reference that synced name, not the name used inside the tenant cluster.

vCluster caps the rewritten name at 63 characters. This cap is vCluster's own, not a Kubernetes limit, since Kubernetes accepts ServiceAccount names up to 253 characters. When the rewritten name is longer, vCluster keeps its first 52 characters and appends `-` plus the first 10 characters of the hex-encoded SHA-256 digest of the full rewritten name. A trust policy built from the untruncated name doesn't match, and the failure surfaces as a permissions error rather than a naming error.

:::warning Resolve the name through the API
Don't hard-code synced ServiceAccount names or reimplement the truncation rule in your own automation. Query the vCluster Platform API as shown below so the name stays correct when namespace or tenant cluster names change.

This applies to ServiceAccounts that sync into the vCluster control plane's namespace, which is the default. If you enable namespace syncing and the ServiceAccount's namespace matches a mapping, vCluster keeps the name unchanged and the API returns a name that doesn't exist. In that case, reference the ServiceAccount by its original name in the mapped namespace on the control plane cluster.
:::

<Tabs>
<TabItem value="bash">
Define a function to fetch the KSA name using curl and use it to export `KSA_NAME` environment variable.

```bash
# Define the function to get the KSA name using curl
get_ksa_name() {
  local vcluster_ksa_name=$1
  local vcluster_ksa_namespace=$2
  local vcluster_name=$3
  local host=$4
  local access_key=$5

  local resource_path="/kubernetes/management/apis/management.loft.sh/v1/translatevclusterresourcenames"
  local host_with_scheme=$([[ $host =~ ^(http|https):// ]] && echo "$host" || echo "https://$host")
  local sanitized_host="${host_with_scheme%/}"
  local full_url="${sanitized_host}${resource_path}"

  local response=$(curl -s -k -X POST "$full_url" \
    -H "Content-Type: application/json" \
    -H "Authorization: Bearer ${access_key}" \
    -d @- <<EOF
{
  "spec": {
    "name": "${vcluster_ksa_name}",
    "namespace": "${vcluster_ksa_namespace}",
    "vclusterName": "${vcluster_name}"
  }
}
EOF
  )

  local status_name=$(echo "$response" | jq -r '.status.name')
  if [[ -z "$status_name" || "$status_name" == "null" ]]; then
    echo "Error: Unable to fetch KSA name from response: $response"
    exit 1
  fi
  echo "$status_name"
}

# Get the KSA name
export KSA_NAME=$(get_ksa_name "$SERVICE_ACCOUNT_NAME" "$SERVICE_ACCOUNT_NAMESPACE" "$VCLUSTER_NAME" "$HOST" "$ACCESS_KEY")
```
</TabItem>
<TabItem value="Terraform">

We prepared a [Terraform module][single-namespace-rename-module] that you can use in order to easily fetch updated resource name from Platform API.

```hcl
module "synced_service_account_name" {
  source        = "github.com/loft-sh/vcluster-terraform-modules//single-namespace-rename"

  providers = {
    http.default = http.default
  }


  host                = var.vcluster_platform_host
  access_key          = var.access_key
  resource_name       = var.service_account_name
  resource_namespace  = var.service_account_namespace
  vcluster_name       = var.vcluster_name
}
```

</TabItem>
</Tabs>

[single-namespace-rename-module]: https://github.com/loft-sh/vcluster-terraform-modules/tree/main/single-namespace-rename
